# lol-esports-prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_REVIEW.md  DEVELOPMENT.md  README.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: README.md
data/processed/: pca_transformed_data.csv
models/: .gitkeep
notebooks/: ANN.ipynb  DNN.ipynb  EDA_and_Dataset_Processing.ipynb  GBDT.ipynb  Logistic_Regression.ipynb  Naive_Bayes.ipynb  Tree_Models-BaggedDT_and_RF.ipynb
results/: .gitkeep  model_comparison.csv
scripts/: run_feature_engineering.py  run_preprocessing.py  train_all_models.py  train_single_model.py
src/: __init__.py  config.py
src/data/: __init__.py  loader.py  preprocessor.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  engineering.py
src/models/: __init__.py  base.py  train.py
src/utils/: __init__.py  logging_config.py  validation.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_metrics.py  test_preprocessor.py  test_validation.py
